# ImageLayering

./: .gitignore  CMakeLists.txt  README.md
imageLayering/: CMakeLists.txt  imgLayering.cpp
